--- a/estilos.css
+++ b/estilos.css
@@ -1,16 +1,19 @@
 body{
-    background-color: whitesmoke;
+    background-color: rgb(245, 245, 245);
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 h1{
     background-color: powderblue;
     margin: 0px;
-    padding: 0.5em;
+    padding-top: 1em;
+    padding-bottom: 1em;
     text-align: center;
+    width: 100%;
 }
 h2{
     margin: 1em;
@@ -18,16 +21,18 @@ h2{
     text-align: center;
 }
 header{
-    width: 100%;
-    height: 3.5em;
+    display: flex;
     min-height: auto;
     text-align: center;
-    background-color: cadetblue;
+    background-color: rgb(95, 158, 160);
+    font-size: 1.25em;
+    width: 100%;
 }
-ul{
+.ultipo1{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    align-content: center;
     padding: 0px;
     margin: 0px;
 }
@@ -35,26 +40,25 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 5em;
-    height: 1.5em;
-    padding: 1em;
+    width: 20vw;
+    height: 2.5em;
+    padding: 1.75vw;
     margin: 0px;
-    background-color: teal;
+    border-radius: 2em;
+    background-color: rgb(0, 128, 128);
+}
+nav{
+    height: 3.5em;
 }
 footer{
-    padding: 3em;
-    margin: 0px;
-    background-color: powderblue;
+    background-color: rgb(176, 224, 230);
     display: flex;
     justify-content: end;
     margin-top: auto;
-}
-.headertipo1 {
-    font-size: 2em;
+    padding: 1em;
 }
 .botontipo1{
     font-size: 1em;
-    height: 100%;
     width: 100%;
 }
 .spantipo1{
@@ -62,9 +66,16 @@ footer{
     align-items: center;
     justify-content: center;
     margin: 0.25em;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    background-color: rgb(191, 191, 191);
+    padding: 1em;
+    border-radius: 1em;
 }
 .divtipo1{
     display: flex;
+    justify-content: center;
     flex-direction: column;
     margin: 0px;
 }
@@ -72,18 +83,23 @@ p{
     margin: 0.2em;
 }
 .normal{
-    display: flex;
-    justify-content: left;
+    width: auto;
+    height: auto;
+}
+.noclass{
+    padding: 0%;
+    margin: 0.2em;
 }
 a{
     font-size: 0.75em;
+    text-decoration: none;
+    padding: 2vw;
 }
-@media (min-width: 600px){
-.Emanuel-Rosas {width: 13.35em;
+.Emanuel-Rosas {
+    width: 13.35em;
     height: 13.7em;
-    background: url(messi-pic.jpg);
+    max-width: 100%;
     border: solid 0.25em;
     margin: 1em;
     padding: 0px;
     border-radius: 6.675em;}
-}
